objects/FieloEE__MemberPortal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FieloEE__BackgroundAttributeMobile__c</fullName>
        <label>zz_deprecated_Background Attr Mobile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BackgroundAttributeNonLog__c</fullName>
        <label>zz_deprecated_Background attr Non Log</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BackgroundAttribute__c</fullName>
        <label>zz_deprecated_Background attribute</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BackgroundIdMobile__c</fullName>
        <label>zz_deprecated_Background Id Mobile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BackgroundIdNonLog__c</fullName>
        <label>zz_deprecated_Background Id Non Log</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BackgroundId__c</fullName>
        <label>zz_deprecated_BackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CSSFile__c</fullName>
        <label>zz_deprecated_CSS File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color01__c</fullName>
        <label>zz_deprecated_Color01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color02__c</fullName>
        <label>zz_deprecated_Color02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color03__c</fullName>
        <label>zz_deprecated_Color03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont01__c</fullName>
        <label>zz_deprecated_ColorFont01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont02__c</fullName>
        <label>zz_deprecated_ColorFont02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont03__c</fullName>
        <label>zz_deprecated_ColorFont03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFontMobile__c</fullName>
        <label>zz_deprecated_Color Font Mobile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Font__c</fullName>
        <label>zz_deprecated_Font</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__LogoMobile__c</fullName>
        <label>zz_deprecated_Logo Mobile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Logo__c</fullName>
        <label>zz_deprecated_Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__MainColorMobile__c</fullName>
        <label>zz_deprecated_Main Color Mobile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Title__c</fullName>
        <label>zz_deprecated_Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__headerBackgroundId__c</fullName>
        <label>zz_deprecated_headerBackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>zz_deprecated_Member Portal</label>
</CustomObject>